[package]
authors = ["강동윤 <kdy1997.dev@gmail.com>"]
description = "Cargo extensions"
edition = "2021"
include = ["Cargo.toml", "src/**/*.rs"]
license = "Apache-2.0"
name = "cargo-ext"
repository = "https://github.com/kdy1/cargo-ext"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
