[package]
authors = ["강동윤 <kdy1997.dev@gmail.com>"]
description = "Cargo extensions"
edition = "2021"
include = ["Cargo.toml", "src/**/*.rs"]
license = "Apache-2.0"
name = "cargo-ext"
repository = "https://github.com/kdy1/cargo-ext"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
cargo-platform = "0.1.2"
cargo_metadata = "0.14.2"
clap = {version = "3.1.18", features = ["derive"]}
tracing = "0.1.34"
tracing-subscriber = { version = "0.3.11", features = ["fmt"] }
