[package]
authors = ["강동윤 <kdy1997.dev@gmail.com>"]
description = "Base crate for extrs"
edition = "2021"
include = ["Cargo.toml", "src/**/*.rs"]
license = "Apache-2.0"
name = "ext-common"
repository = "https://github.com/extrs/ext"
version = "0.1.1"

[dependencies]
anyhow = "1.0.57"
clap = {version = "3.1.18", features = ["cargo", "env", "wrap_help"]}
tracing = "0.1.34"
tracing-subscriber = {version = "0.3.11", features = ["fmt"]}
