[package]
authors = ["강동윤 <kdy1997.dev@gmail.com>"]
description = "Retry tool"
edition = "2021"
include = ["Cargo.toml", "src/**/*.rs"]
license = "Apache-2.0"
name = "ext-retry"
repository = "https://github.com/extrs/ext"
version = "0.1.0"

[dependencies]
ext-common = {version = "0.1.0", path = "../ext-common"}
