[package]
authors = ["강동윤 <kdy1997.dev@gmail.com>"]
description = "timeout tool"
edition = "2021"
include = ["Cargo.toml", "src/**/*.rs"]
license = "Apache-2.0"
name = "ext-timeout"
repository = "https://github.com/extrs/ext"
version = "0.1.1"

[dependencies]
anyhow = "1.0.57"
clap = {version = "3.1.18", features = ["derive"]}
ext-common = {version = "0.1.1", path = "../ext-common"}
humantime = "2.1.0"
tokio = {version = "1.18.2", features = ["process", "sync", "time"]}
