[package]
authors = ["강동윤 <kdy1997.dev@gmail.com>"]
description = "Commands for extrs itslef"
edition = "2021"
include = ["Cargo.toml", "src/**/*.rs"]
license = "Apache-2.0"
name = "extrs-self"
repository = "https://github.com/extrs/ext"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
clap = {version = "3.1.18", features = ["derive"]}
